[gd_scene load_steps=14 format=3 uid="uid://bv7cai22001ha"]

[ext_resource type="Texture2D" uid="uid://dijy8fqhw0wtm" path="res://Assets/NinjaAdventure/Actor/Characters/BlueSamurai/player_sprites.png" id="1_kybbq"]
[ext_resource type="Script" path="res://scenes/Player/player.gd" id="1_s60wp"]
[ext_resource type="AudioStream" uid="uid://dbk5khqobq1fj" path="res://Assets/NinjaAdventure/Sounds/Game/Hit.wav" id="3_nbump"]
[ext_resource type="PackedScene" path="res://scenes/Stats/Health/health_stats.tscn" id="4_4q48a"]
[ext_resource type="PackedScene" uid="uid://bdc8xh3m0cb1n" path="res://scenes/Stats/Kills/kill_stats.tscn" id="5_hvjpr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6vyry"]
radius = 2.0
height = 12.0

[sub_resource type="Animation" id="Animation_abiaa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_meu4r"]
resource_name = "walkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_k4ici"]
resource_name = "walkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_8xmea"]
resource_name = "walkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_aaue0"]
resource_name = "walkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k0yvl"]
_data = {
"RESET": SubResource("Animation_abiaa"),
"walkDown": SubResource("Animation_meu4r"),
"walkLeft": SubResource("Animation_k4ici"),
"walkRight": SubResource("Animation_8xmea"),
"walkUp": SubResource("Animation_aaue0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xal67"]
size = Vector2(12, 6)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
y_sort_enabled = true
texture_filter = 1
collision_mask = 5
motion_mode = 1
script = ExtResource("1_s60wp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kybbq")
offset = Vector2(0, -8)
hframes = 4
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6vyry")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k0yvl")
}

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_xal67")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitSound" type="AudioStreamPlayer" parent="." groups=["Player"]]
stream = ExtResource("3_nbump")
volume_db = -12.0
pitch_scale = 2.0

[node name="HealthStats" parent="." instance=ExtResource("4_4q48a")]
max_health = 100

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="KillStats" parent="." instance=ExtResource("5_hvjpr")]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
